--- a/theme/web/custom-styling-ats.scss
+++ b/theme/web/custom-styling-ats.scss
@@ -1,6 +1,6 @@
 // Login Start 
 
-.custm-form-control{
+.custm-form-control {
     .form-control {
         display: flex;
         flex: 1;
@@ -22,7 +22,8 @@
         width: 350px;
     }
 }
-.cust-login-bg-col{
+
+.cust-login-bg-col {
     background: white;
     display: flex;
     justify-content: center;
@@ -30,27 +31,32 @@
     height: 90vh;
     overflow: hidden;
 }
-.cus-login-right{
+
+.cus-login-right {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.login-text{
+.login-text {
     font-size: 33px;
     font-weight: 600;
     color: #8f4dc3;
     word-spacing: 4px;
     letter-spacing: 1px;
 }
-.login-text-2{
+
+.login-text-2 {
     color: #8f4dc3;
     font-size: 16px;
     font-weight: 500;
 }
-.login-but{
-    .btn, .btn-default {
+
+.login-but {
+
+    .btn,
+    .btn-default {
         color: #ffffff;
         /* border-color: #e7e7e9; */
         background-color: #8f4dc3;
@@ -59,18 +65,20 @@
         height: 50px;
         transition: 0.5s;
     }
-    
+
 }
-.login-but:hover{
-    background-color:#993fdd ;
+
+.login-but:hover {
+    background-color: #993fdd;
     scale: 1.1;
     border-radius: 30px;
     border: 0px;
     animation: fill duration timing-function delay iteration-count direction fill-mode;
-    
+
 }
+
 // Login End 
- 
+
 // layout Start 
 
 .layout-atlas .region-topbar {
@@ -78,8 +86,9 @@
     z-index: 2;
     min-height: 48px;
     background-color: #ffffff;
-    
+
 }
+
 .layout-atlas .region-topbar .navbar-brand img {
     display: none;
     margin-right: 8px;
@@ -87,59 +96,63 @@
     height: 32px;
 }
 
-.layout-atlas-responsive .region-topbar .mx-icon-filled, .layout-atlas-responsive .region-topbar .mx-icon-lined, .layout-atlas-responsive-default .region-topbar .mx-icon-filled, .layout-atlas-responsive-default .region-topbar .mx-icon-lined {
+.layout-atlas-responsive .region-topbar .mx-icon-filled,
+.layout-atlas-responsive .region-topbar .mx-icon-lined,
+.layout-atlas-responsive-default .region-topbar .mx-icon-filled,
+.layout-atlas-responsive-default .region-topbar .mx-icon-lined {
     font-size: 20px;
     color: black;
 }
+
 .layout-atlas .region-sidebar {
     background-color: #8f4dc3;
     z-index: 101;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 2px 4px 8px rgba(0, 0, 0, 0.28);
 }
-.region-sidebar .mx-navigationtree .navbar-inner > ul > li > a {
+
+.region-sidebar .mx-navigationtree .navbar-inner>ul>li>a {
     color: #ffffff;
     border-color: #171946;
     background-color: #8f4dc3;
     font-size: 14px;
+    border: 1px solid;
+    border-radius: 5px;
+    margin-top: 10px;
 }
-.region-sidebar .mx-navigationtree .navbar-inner > ul > li a:hover, .region-sidebar .mx-navigationtree .navbar-inner > ul > li a:focus, .region-sidebar .mx-navigationtree .navbar-inner > ul > li a.active {
+
+.region-sidebar .mx-navigationtree .navbar-inner>ul>li a:hover,
+.region-sidebar .mx-navigationtree .navbar-inner>ul>li a:focus,
+.region-sidebar .mx-navigationtree .navbar-inner>ul>li a.active {
     color: #8f4dc3;
     background-color: #fff;
 }
-.button{
-.btn, .btn-default {
-    color: #ffffff;
-    border-color: #e7e7e9;
-    background-color: #8f4dc3;
-}
+
+.button {
+
+    .btn,
+    .btn-default {
+        color: #ffffff;
+        border-color: #e7e7e9;
+        background-color: #8f4dc3;
+    }
 
 }
 
-.mx-groupbox .mx-groupbox-header + .mx-groupbox-body {
+.mx-groupbox .mx-groupbox-header+.mx-groupbox-body {
     border-top: none;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
 
-.custon-wizard{
-    padding: 10px;
-    font-size: 20px;
-    font-weight: 500;
-    border: 1px solid #000000;
-    border-radius: 8px;
-    color: #8f4dc3;
-    margin-top: 10px;
-}
-.custon-wizard:active{
-    background: #8f4dc3;
-}
-.mx-groupbox > .mx-groupbox-header {
-    center{
-            display: flex;
-    justify-content: center;
-    align-self: center;
+
+.mx-groupbox>.mx-groupbox-header {
+    center {
+        display: flex;
+        justify-content: center;
+        align-self: center;
 
     }
+
     margin: 0;
     color: #ffffff;
     border-width: 1px 1px 0 1px;
@@ -152,106 +165,312 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
-.center-item{
+
+.center-item {
     display: flex;
     justify-content: center;
     align-self: center;
 
 }
-.cust-upload{
-.btn.disabled, .btn.disabled:hover, .btn.disabled:focus, .btn.disabled:active, .btn.disabled.active, .btn[disabled], .btn[disabled]:hover, .btn[disabled]:focus, .btn[disabled]:active, .btn[disabled].active, .btn[aria-disabled], .btn[aria-disabled]:hover, .btn[aria-disabled]:focus, .btn[aria-disabled]:active, .btn[aria-disabled].active, .btn fieldset[disabled], .btn fieldset[disabled]:hover, .btn fieldset[disabled]:focus, .btn fieldset[disabled]:active, .btn fieldset[disabled].active, .btn-default.disabled, .btn-default.disabled:hover, .btn-default.disabled:focus, .btn-default.disabled:active, .btn-default.disabled.active, .btn-default[disabled], .btn-default[disabled]:hover, .btn-default[disabled]:focus, .btn-default[disabled]:active, .btn-default[disabled].active, .btn-default[aria-disabled], .btn-default[aria-disabled]:hover, .btn-default[aria-disabled]:focus, .btn-default[aria-disabled]:active, .btn-default[aria-disabled].active, .btn-default fieldset[disabled], .btn-default fieldset[disabled]:hover, .btn-default fieldset[disabled]:focus, .btn-default fieldset[disabled]:active, .btn-default fieldset[disabled].active {
-    color:#fff;
-    background: #8f4dc3;
+
+.cust-upload {
+
+    .btn.disabled,
+    .btn.disabled:hover,
+    .btn.disabled:focus,
+    .btn.disabled:active,
+    .btn.disabled.active,
+    .btn[disabled],
+    .btn[disabled]:hover,
+    .btn[disabled]:focus,
+    .btn[disabled]:active,
+    .btn[disabled].active,
+    .btn[aria-disabled],
+    .btn[aria-disabled]:hover,
+    .btn[aria-disabled]:focus,
+    .btn[aria-disabled]:active,
+    .btn[aria-disabled].active,
+    .btn fieldset[disabled],
+    .btn fieldset[disabled]:hover,
+    .btn fieldset[disabled]:focus,
+    .btn fieldset[disabled]:active,
+    .btn fieldset[disabled].active,
+    .btn-default.disabled,
+    .btn-default.disabled:hover,
+    .btn-default.disabled:focus,
+    .btn-default.disabled:active,
+    .btn-default.disabled.active,
+    .btn-default[disabled],
+    .btn-default[disabled]:hover,
+    .btn-default[disabled]:focus,
+    .btn-default[disabled]:active,
+    .btn-default[disabled].active,
+    .btn-default[aria-disabled],
+    .btn-default[aria-disabled]:hover,
+    .btn-default[aria-disabled]:focus,
+    .btn-default[aria-disabled]:active,
+    .btn-default[aria-disabled].active,
+    .btn-default fieldset[disabled],
+    .btn-default fieldset[disabled]:hover,
+    .btn-default fieldset[disabled]:focus,
+    .btn-default fieldset[disabled]:active,
+    .btn-default fieldset[disabled].active {
+        color: #fff;
+        background: #8f4dc3;
+    }
 }
+
+.cust-from {
+    .form-control {
+        display: flex;
+        flex: 1;
+        min-width: 50px;
+        height: auto;
+        padding: 8px 8px;
+        transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+        color: #0a1325;
+        border: 1px solid #e7e7e9;
+        border-radius: 4px;
+        background-color: #fdfbff;
+        background-image: none;
+        box-shadow: none;
+        font-size: 14px;
+        line-height: 1.428571429;
+        appearance: none;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+    }
 }
-.cust-from{
-.form-control {
-    display: flex;
-    flex: 1;
-    min-width: 50px;
-    height: auto;
-    padding: 8px 8px;
-    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-    color: #0a1325;
-    border: 1px solid #e7e7e9;
-    border-radius: 4px;
-    background-color: #edd7ff;
-    background-image: none;
-    box-shadow: none;
-    font-size: 14px;
-    line-height: 1.428571429;
-    appearance: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-}
-}
+
 ul.tagit li.tagit-choice-editable {
     padding: 0.5em 22px 0.2em 0.7em;
     /* padding: 4px; */
 }
+
 input[type=radio]:checked:before {
     border-color: #525b83;
     background-color: #8f4dc3;
 }
 
 // DELETED 
-.cust-del{
-.btn, .btn-default {
-    color: #ffffff;
-    border-color: #e7e7e9;
-    background-color: #ff0606;
+.cust-del {
+
+    .btn,
+    .btn-default {
+        color: #ffffff;
+        border-color: #e7e7e9;
+        background-color: #ff0606;
+    }
 }
-}
+
 // Edit
-.cust-del-1{
-    .btn, .btn-default {
+.cust-del-1 {
+
+    .btn,
+    .btn-default {
         color: #ffffff;
         border-color: #e7e7e9;
         background-color: rgb(27, 184, 27);
     }
-    }
-    .background-img{
-        background-image: url(Login-background.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        height: 100vh;
-    }
-    .label{ border: 1px solid #c5c5c500/*{borderColorDefault}*/;
-    background: #f6f6f6da/*{bgColorDefault}*/ /*{bgImgUrlDefault}*/ /*{bgDefaultXPos}*/ /*{bgDefaultYPos}*/ /*{bgDefaultRepeat}*/;
-    font-weight: normal/*{fwDefault}*/;
-    color: #c5c5c5/*{fcDefault}*/;
-    }
-    .region-topbar .mx-navbar ul.nav > li.mx-navbar-item > a:hover, .region-topbar .mx-navbar ul.nav > li.mx-navbar-item > a:focus, .region-topbar .mx-navbar ul.nav > li.mx-navbar-item > a.active {
-        color: #fff;
-        background-color: #8f4dc3;
-    }
-    .layout-atlas .region-topbar {
-        position: relative;
-        z-index: 2;
-        min-height: 48px;
-        background-color: #ffffff;
-        box-shadow: 0px 9px 10px -15px #111;
-    }
-    .region-sidebar .mx-navigationtree {
-        background-color: #8f4dc3;
-    }
+}
 
-    .layout-atlas .region-sidebar .mx-navigationtree .navbar-inner > ul > li > a {
-        padding: 16px;
-        text-align: center;
-        display: flex;
+.background-img {
+    background-image: url(Login-background.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
+}
+
+.label {
+    border: 1px solid #c5c5c500
+    /*{borderColorDefault}*/
+    ;
+    background: #f6f6f6da
+    /*{bgColorDefault}*/
+    /*{bgImgUrlDefault}*/
+    /*{bgDefaultXPos}*/
+    /*{bgDefaultYPos}*/
+    /*{bgDefaultRepeat}*/
+    ;
+    font-weight: normal
+    /*{fwDefault}*/
+    ;
+    color: #c5c5c5
+    /*{fcDefault}*/
+    ;
+}
+
+.region-topbar .mx-navbar ul.nav>li.mx-navbar-item>a:hover,
+.region-topbar .mx-navbar ul.nav>li.mx-navbar-item>a:focus,
+.region-topbar .mx-navbar ul.nav>li.mx-navbar-item>a.active {
+    color: #fff;
+    background-color: #8f4dc3;
+}
+
+.layout-atlas .region-topbar {
+    position: relative;
+    z-index: 2;
+    min-height: 48px;
+    background-color: #ffffff;
+    box-shadow: 0px 9px 10px -15px #111;
+}
+
+.region-sidebar .mx-navigationtree {
+    background-color: #8f4dc3;
+}
+
+.layout-atlas .region-sidebar .mx-navigationtree .navbar-inner>ul>li>a {
+    padding: 16px;
+    text-align: center;
+    display: flex;
     justify-content: center;
     align-items: center;
-    }
-    .region-topbar .mx-navbar ul.nav > .mx-navbar-item > a:hover, .region-topbar .mx-navbar ul.nav > .mx-navbar-item > a:focus, .region-topbar .mx-navbar ul.nav > .mx-navbar-item.active a, .region-topbar .mx-navbar ul.nav > .mx-navbar-item.open > a, .region-topbar .mx-navbar ul.nav > .mx-navbar-item.open > a:hover, .region-topbar .mx-navbar ul.nav > .mx-navbar-item.open > a:focus {
-        color: #fff;
-        background-color:#8f4dc3 ;
-    }
+}
 
-    .region-topbar .mx-navbar ul.nav > li.mx-navbar-item > a {
-        color: rgb(143 77 195);
-        font-size: 14px;
-        line-height: 1.2;
-    }
-  
+.region-topbar .mx-navbar ul.nav>.mx-navbar-item>a:hover,
+.region-topbar .mx-navbar ul.nav>.mx-navbar-item>a:focus,
+.region-topbar .mx-navbar ul.nav>.mx-navbar-item.active a,
+.region-topbar .mx-navbar ul.nav>.mx-navbar-item.open>a,
+.region-topbar .mx-navbar ul.nav>.mx-navbar-item.open>a:hover,
+.region-topbar .mx-navbar ul.nav>.mx-navbar-item.open>a:focus {
+    color: #fff;
+    background-color: #8f4dc3;
+}
+
+.region-topbar .mx-navbar ul.nav>li.mx-navbar-item>a {
+    color: rgb(143 77 195);
+    font-size: 14px;
+    line-height: 1.2;
+}
+
+
+// menu Start 
+.region-topbar .mx-navbar ul.nav>.mx-navbar-item.open .dropdown-menu {
+    border-radius: 4px;
+    background-color: #FFF;
+    padding: 8px 8px 0px;
+    margin: 0px;
+    border: 0px;
+    box-shadow: rgba(194, 196, 201, 0.3) 0px 2px 2px;
+}
+
+.region-topbar .mx-navbar ul.nav>.mx-navbar-item.open .dropdown-menu>li.mx-navbar-subitem a {
+    padding: 8px;
+    color: rgb(143 77 195);
+    border-radius: 4px;
+    margin-bottom: 8px;
+    line-height: 1.2;
+}
+
+.region-topbar .mx-navbar ul.nav>.mx-navbar-item.open .dropdown-menu>li.mx-navbar-subitem a:hover,
+.region-topbar .mx-navbar ul.nav>.mx-navbar-item.open .dropdown-menu>li.mx-navbar-subitem a:focus {
+    color: #fff;
+    background-color: #d59fff;
+}
+
+.region-topbar .mx-navbar ul.nav>li.mx-navbar-item>a:hover,
+.region-topbar .mx-navbar ul.nav>li.mx-navbar-item>a:focus,
+.region-topbar .mx-navbar ul.nav>li.mx-navbar-item>a.active {
+    color: #fff;
+    background-color: #d59fff;
+}
+
+
+// Tab container 
+.mx-tabcontainer .mx-tabcontainer-tabs > li.active > a, .mx-tabcontainer .mx-tabcontainer-tabs > li.active > a:hover, .mx-tabcontainer .mx-tabcontainer-tabs > li.active > a:focus {
+    color: #fff;
+    background-color: #d59fff;
+}
+
+.mx-tabcontainer .mx-tabcontainer-tabs > li.active > a, .mx-tabcontainer .mx-tabcontainer-tabs > li.active > a:hover, .mx-tabcontainer .mx-tabcontainer-tabs > li.active > a:focus {
+    color: #fff;
+    background-color: #d59fff;
+    width: 160px;
+    text-align: center;
+}
+.mx-tabcontainer .mx-tabcontainer-tabs > li > a {
+    margin-right: 0;
+    transition: all 0.2s ease-in-out;
+    color: #6c717e;
+    font-weight: normal;
+    border-radius: 4px 4px 0 0;
+    width: 170px;
+    text-align: center;
+    background-color: #efe2f8;
+    margin-left: 10px;
+}
+
+
+// buttton
+.cust-butt{
+.btn, .btn-default {
+    color: #6c717e !important;
+    border-color: #e7e7e9;
+    background-color: #efe2f8;
+}
+.btn:hover, .btn:focus, .btn:active, .btn.active, .open > .btn.dropdown-toggle, .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open > .btn-default.dropdown-toggle {
+    color: #ffffff !important;
+    border-color: #e7e7e9;
+    background-color: #d59fff;
+}
+}
+// page-butt
+.cusm-pg-bt{
+.btn, .btn-default{
+    color: #6c717e !important;
+    border-color: #e7e7e9;
+    background-color: #efe2f8;
+    width: 240px;
+}
+
+.btn:hover, .btn:focus, .btn:active, .btn.active, .open > .btn.dropdown-toggle, .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open > .btn-default.dropdown-toggle{
+    color: #ffffff !important;
+    border-color: #e7e7e9;
+    background-color: #d59fff;
+}
+}
+// Space-arund
+.flex-space{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+// table 
+
+.cust-tb-th{
+.mx-datagrid table th {
+    border-style: solid;
+    border-color: #ced0d3;
+    border-top-width: 0;
+    border-right: 0;
+    border-bottom-width: 1px;
+    border-left: 0;
+    background-color: #efe2f8;
+    padding: 16px 16px 16px 16px;
+    vertical-align: middle;
+    color: #6c717e;
+}
+}
+// popup 
+.modal-dialog .modal-content .modal-header {
+    padding: 15px 20px;
+    border-bottom-color: rgb(206, 208, 211);
+    border-radius: 0px;
+    background: #d59fff;
+    color: #fff;
+}
+
+.modal-dialog .modal-content .modal-header h4 {
+    margin: 0;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: bold;
+}
+// font-size
+.font-size{
+    font-size: 24px;
+    font-weight: 700;
+    color: #454648;
+}
