--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27213,4 +27213,36 @@ input[type=radio]:checked:before {
   color: #fff;
 }
 
+.drop-bt :where(.css-foam9q).ant-btn-primary {
+  color: #6c717e !important;
+  border-color: #e7e7e9;
+  background-color: #efe2f8;
+}
+.drop-bt :where(.css-foam9q).ant-btn-primary:not(:disabled):hover {
+  color: #ffffff !important;
+  border-color: #e7e7e9;
+  background-color: #d59fff;
+}
+
+.dash-cont {
+  background: rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 14px;
+}
+
+.dash-cont-2 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: #fff;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
 /*# sourceMappingURL=theme.compiled.css.map */
