--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -21954,52 +21954,79 @@ h6,
 }
 
 /* ==========================================================================
+
    Progress
 
+
+
    Default Mendix progress widget.
+
 ========================================================================== */
 .mx-progress {
   color: #0a1325;
-  background: #fff;
+  background: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .mx-progress .mx-progress-message {
   color: #0a1325;
 }
 .mx-progress .mx-progress-indicator {
+  width: 70px;
+  height: 70px;
+  background: #eee;
+  border-radius: 50%;
   position: relative;
-  overflow: hidden;
-  width: 100%;
-  max-width: 100%;
-  height: 2px;
-  margin: auto;
-  padding: 0;
-  border-radius: 0;
-  background: #f8f8f8;
+  display: inline-block;
 }
-.mx-progress .mx-progress-indicator:before, .mx-progress .mx-progress-indicator:after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 50%;
-  height: 2px;
+.mx-progress .mx-progress-indicator:after, .mx-progress .mx-progress-indicator:before {
   content: "";
-  transform: translate3d(-100%, 0, 0);
-  background: #264ae5;
+  display: block;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
 }
 .mx-progress .mx-progress-indicator::before {
-  animation: loader 2s infinite;
+  position: absolute;
+  top: 17px;
+  left: 17px;
+  height: 35px;
+  width: 35px;
+  background-color: #8f4dc3;
+  animation: loader-circle-3-shrink 3s ease infinite;
 }
 .mx-progress .mx-progress-indicator::after {
-  animation: loader 2s -2s infinite;
+  position: absolute;
+  border: 4px solid transparent;
+  border-top-color: #d59fff;
+  border-bottom-color: #efe2f8;
+  top: -4px;
+  left: -4px;
+  animation: loader-circle-3-spin 2s linear infinite;
 }
 
-@keyframes loader {
+@keyframes loader-circle-3-spin {
   0% {
-    transform: translate3d(-100%, 0, 0);
+    transform: rotate(0deg) scale(1);
+  }
+  50% {
+    transform: rotate(180deg) scale(1.2);
   }
   100% {
-    transform: translate3d(200%, 0, 0);
+    transform: rotate(360deg) scale(1);
+  }
+}
+@keyframes loader-circle-3-shrink {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.6);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 /* ==========================================================================
