--- a/theme/web/custom-styling-ats.scss
+++ b/theme/web/custom-styling-ats.scss
@@ -587,3 +587,51 @@ input[type=radio]:checked:before {
     border-color: #1e3bb7;
     background-color: #d59fff;
 }
+
+
+// Home page Welcome Text 
+
+// .main-conta{
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     min-height: 100vh;
+//   }
+
+// .conta {
+//     // position: ;
+   
+// }
+
+.conta h2 {
+    position: absolute;
+    // transform: translate(-50%, -50%);
+    font-size: 4em;
+}
+
+.conta h2:nth-child(1) {
+    color: transparent;
+    -webkit-text-stroke: 2px #8f4dc3;
+
+}
+
+.conta h2:nth-child(2) {
+    color: #8f4dc3;
+    animation: animate 4s ease-in-out infinite;
+
+
+}
+
+
+
+@keyframes animate {
+
+    0%,
+    100% {
+        clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
+    }
+
+    50% {
+        clip-path: polygon(0% 60%, 16% 65%, 34% 66%, 51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
+    }
+}
