--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27524,6 +27524,8 @@ input[type=radio]:checked:before {
   background-color: #975ac7;
   /* height: 52px; */
   border-radius: inherit;
+  width: auto;
+  height: 38px;
 }
 
 .tab-wizard.mx-tabcontainer > .mx-tabcontainer-tabs > li > a {
@@ -27536,8 +27538,8 @@ input[type=radio]:checked:before {
   border: 1px solid #ced0d3;
   /* border-radius: 100%; */
   background-color: #efe2f8;
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 13px;
+  font-weight: 600;
   display: flex;
   justify-content: center;
   border-radius: inherit;
