--- a/theme/web/custom-styling.scss
+++ b/theme/web/custom-styling.scss
@@ -27,11 +27,14 @@
     background-color: #975ac7;
     /* height: 52px; */
     border-radius: inherit;
+    width: auto;
+    height: 38px;
+
 }
 
 .tab-wizard.mx-tabcontainer>.mx-tabcontainer-tabs>li>a {
     width: auto;
-    height: calc((16px * 2) + 1px);
+    height: 33px;
     margin: auto;
     padding: 0;
     text-align: center;
@@ -39,10 +42,10 @@
     border: 1px solid #ced0d3;
     /* border-radius: 100%; */
     background-color: #efe2f8;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 13px;
+    font-weight: 600;
     display: flex;
     justify-content: center;
     border-radius: inherit;
-        align-items: center;
+    align-items: center;
 }
