--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27564,6 +27564,19 @@ input[type=radio]:checked:before {
     clip-path: polygon(0% 60%, 16% 65%, 34% 66%, 51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
   }
 }
+.region-sidebar .mx-navigationtree li.mx-navigationtree-has-items > ul li a.active {
+  color: #fff;
+  background-color: #8f4dc3;
+}
+
+.alert-danger {
+  color: #ff0017;
+  border-color: #ffffff;
+  background-color: #ffffff;
+  border: none;
+  padding: 0px;
+}
+
 .custom-listview .mx-listview > ul > li {
   transition: all 0.3s 0s cubic-bezier(0.4, 0, 0.2, 1);
   transform-style: initial;
