--- a/theme/web/custom-styling-ats.scss
+++ b/theme/web/custom-styling-ats.scss
@@ -653,3 +653,17 @@ input[type=radio]:checked:before {
         clip-path: polygon(0% 60%, 16% 65%, 34% 66%, 51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
     }
 }
+
+.region-sidebar .mx-navigationtree li.mx-navigationtree-has-items > ul li a.active {
+    color: #fff;
+    background-color: #8f4dc3;
+}
+
+
+.alert-danger {
+    color: #ff0017;
+    border-color: #ffffff;
+    background-color: #ffffff;
+    border: none;
+    padding: 0px;
+}
